--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.example.App</mainClass>
+          <mainClass>App</mainClass>
         </configuration>
       </plugin>
       <plugin>
@@ -64,7 +64,7 @@
           <archive>
             <index>false</index>
             <manifest>
-              <mainClass>com.example.App</mainClass>
+              <mainClass>App</mainClass>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
             </manifest>
